--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,9 @@ script:
     )
 after_script:
   - docker images
-
+deploy:
+  provider: script
+  script: bash update.sh $image
+  on:
+    branch: master
 # vim:set et ts=2 sw=2:
