--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,9 @@ after_script:
   - docker images
 deploy:
   provider: script
-  script: bash ../update.sh "$image"
+  script:
+    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+    - docker push "diyfr/$image"
   on:
     branch: master
 # vim:set et ts=2 sw=2:
