--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,13 @@ script:
     )
 after_script:
   - docker images
+before_deploy:
+  - image="openjdk-alpine-fonts:$VERSION"
 deploy:
   provider: script
   script:
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-    - docker push "diyfr/$image"
+    - docker push "$DOCKER_USERNAME/$image"
   on:
     branch: master
 # vim:set et ts=2 sw=2:
